# Finance-Document-Analyzer

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yml  evaluate_interactive.py  evalution.py  interactive_chat.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  security.yml
api/: routes.py  schemas.py
atoms/: chunk_creator.py  embedding_generator.py  file_reader.py  financial_extractor.py  query_analyzer.py  text_cleaner.py
config/: logging_config.py  settings.py
core/: exceptions.py  types.py
evaluation/: __init__.py  dataset.py  evaluator.py  metrics.py
molecules/: document_processor.py  retriever.py  table_processor.py  vector_store.py
organisms/: ingestion_pipeline.py  query_engine.py  response_generator.py
templates/: prompts.py
tests/: test_api.py
tests/integration/: __init__.py  test_api_integration.py
tests/test_atoms/: test_chunk_creator.py
tests/test_molecules/: test_document_processor.py
utils/: helpers.py  validators.py
